[project]
name = "audiopipe"
version = "1.0"
authors = [
    { name="iodomi", email="me@iodomi.eu" },
]
description = "yt-dlp based cli music downloader"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["spotipy", "yt_dlp", "py-json", "platformdirs"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://codeberg.org/iodomi/audiopipe"
Issues = "https://codeberg.org/iodomi/audiopipe/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
